--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
+    "lodash": "^4.17.2",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
@@ -20,6 +21,7 @@
     "strong-error-handler": "^1.0.1"
   },
   "devDependencies": {
+    "csv-parse": "^1.1.7",
     "eslint": "^2.13.1",
     "eslint-config-loopback": "^4.0.0",
     "nsp": "^2.1.0"
