--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
     "lodash": "^4.17.2",
-    "loopback": "^2.22.0",
+    "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-connector-postgresql": "^2.7.0",
-    "loopback-datasource-juggler": "^2.39.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1"
   },
@@ -24,7 +23,9 @@
     "csv-parse": "^1.1.7",
     "eslint": "^2.13.1",
     "eslint-config-loopback": "^4.0.0",
-    "nsp": "^2.1.0"
+    "loopback-sdk-angular": "^3.0.0",
+    "nsp": "^2.1.0",
+    "replacestream": "^4.0.2"
   },
   "repository": {
     "type": "",
