--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "csv-parse": "^1.1.7",
     "eslint": "^2.13.1",
+    "eslint-config-dustinspecker": "^1.4.1",
     "eslint-config-loopback": "^4.0.0",
     "loopback-sdk-angular": "^3.0.0",
     "nsp": "^2.1.0",
